tests/build/property_macro/fail/invalid_priority.stderr
error: expected one of: `context`, `event`, `outer`, `size`, `inner`, `capture_only`
 --> $DIR/invalid_priority.rs:3:12
  |
3 | #[property(invalid)]
  |            ^^^^^^^
